<resources>
    <string name="app_name">ShoppingListRedux</string>
    <string name="dark_mode_switch_text">Blue mode</string>
    <string name="settings_button_text">Settings</string>
    <string name="back_button_text">Back</string>
    <string name="open_list_button_text">Show list</string>
    <string name="populate_base_text">Populate Database</string>
    <string name="drop_base">Drop Data</string>
    <string name="add_item_text">Add Item</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_quantity_text">Quantity</string>
    <string name="upgrade_db_text">Upgrade Database</string>
    <string name="delete_item_text">Delete Item</string>
    <string name="modify_item">Modify Item</string>
    <string name="item_bought_text">Is bought?</string>
    <string name="item_price_text">Price</string>
    <string name="show_all_switch_text">Hide bought items</string>
    <string name="remove_item">Remove Item</string>
</resources>
